--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
     </parent>
     <modules>
         <module>store</module>
         <module>store-common</module>
+        <module>storefrontend</module>
     </modules>
     <dependencies>
         <dependency>
