add security to Frontend

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>store</module>
         <module>store-common</module>
         <module>storefrontend</module>
+        <module>rest-client</module>
     </modules>
     <dependencies>
         <dependency>
