--- a/storefrontend/pom.xml
+++ b/storefrontend/pom.xml
@@ -126,6 +126,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <!-- ROLE GRANTED ACESS SECURITY -->
+        <dependency>
+            <groupId>org.ilay</groupId>
+            <artifactId>ilay</artifactId>
+            <version>3.0-Final</version>
+        </dependency>
     </dependencies>
 
     <build>
